# solid_auth

./: LICENSE  README.md  alembic.ini  docker-compose.yaml  hello.py  pyproject.toml
src/auth/application/: enums.py
src/auth/application/ports/: access_token_request_handler.py  committer.py  identity_provider.py  session_data_gateway.py  user_data_gateway.py
src/auth/application/session/: access_token_processor_jwt.py  errors.py  timer_utc.py  types.py
src/auth/application/session/scenarios/sign_up/: dtos.py  interactor.py
src/auth/application/session/services/: jwt_token.py
src/auth/application/user/: errors.py
src/auth/application/user/services/: authorization.py
src/auth/domain/base/: entity.py  value_object.py
src/auth/domain/session/: entity.py  service.py  value_objects.py
src/auth/domain/session/ports/: session_id_generator.py
src/auth/domain/user/: entity.py  enums.py  service.py  value_objects.py
src/auth/domain/user/errors/: existence.py  non_existence.py
src/auth/domain/user/ports/: password_hasher.py
src/auth/domain/user/validation/: constants.py  validators.py
src/auth/infrastructure/: errors.py  types.py
src/auth/infrastructure/adapters/: password_hasher_bcrypt.py  session_data_mapper.py  sqla_committer.py  user_data_mapper.py  user_id_generator_uuid.py
src/auth/infrastructure/sqla_persistence/alembic/: env.py
src/auth/infrastructure/sqla_persistence/tables/: session.py  user.py
src/auth/infrastructure/sqla_persistence/types/: uuid_pk.py
src/auth/setup/: config.py
(+1 files in other folders)
