[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solid-auth"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "async-sqlalchemy>=1.0.0",
    "bcrypt>=4.2.1",
    "black>=24.10.0",
    "greenlet>=3.1.1",
    "isort>=5.13.2",
    "jwt>=1.3.1",
    "mypy>=1.13.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.3",
    "uuid6>=2024.7.10",
]
